# amsc-openmetadata-tiled-sync

./: Dockerfile  README.md  pyproject.toml  test.py
src/amsc_openmetadata_tiled_sync/: __init__.py  main.py
